syntax = "proto3";
option csharp_namespace = "SocialWeather.Protobuf";

message WeatherReport {

        enum WeatherKind {
            Sunny = 0;
            MostlySunny = 1;
            PartlySunny = 2;
            PartlyCloudy = 3;
            MostlyCloudy = 4;
            Cloudy = 5;
        }

        int32 Temperature = 1;
        int64 ReportTime = 2;
        WeatherKind Weather = 3;
        string ZipCode = 4;
}